compatibility-tests/compile-fail/tests/ui/duplication-implicit-attributes.stderr
error: Multiple `implicit` attributes are not supported on a field
  --> tests/ui/duplication-implicit-attributes.rs:17:17
   |
17 |         #[snafu(implicit)]
   |                 ^^^^^^^^
